gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sockshop-gateway
  namespace: sock-shop
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sockshop
  namespace: sock-shop
spec:
  hosts:
  - "*"
  gateways:
  - sockshop-gateway
  http:
  - match:
     - uri:
         prefix: /
    route:
    - destination:
        host: front-end
        port:
          number: 80
